<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<packaging>jar</packaging>

	<groupId>org.junithelper</groupId>
	<artifactId>junithelper-plugin</artifactId>
	<version>1.5</version>

	<name>${project.artifactId}</name>
	<description>JUnit Helper Eclipse Plugin</description>
	<url>http://junithelper.org/</url>
	<inceptionYear>2009</inceptionYear>

	<organization>
		<name>junithelper.org</name>
		<url>http://junithelper.org/</url>
	</organization>

	<scm>
		<developerConnection>scm:svn:https://junithelper.googlecode.com/svn/trunk</developerConnection>
		<url>https://junithelper.googlecode.com/svn/trunk</url>
	</scm>

	<issueManagement>
		<system>Google code issues list</system>
		<url>http://code.google.com/p/junithelper/issues/list</url>
	</issueManagement>

	<repositories>
		<repository>
			<releases>
				<enabled>true</enabled>
				<updatePolicy>always</updatePolicy>
				<checksumPolicy>warn</checksumPolicy>
			</releases>
			<snapshots>
				<enabled>true</enabled>
				<updatePolicy>never</updatePolicy>
				<checksumPolicy>fail</checksumPolicy>
			</snapshots>
			<id>java.net</id>
			<name>java.net repo</name>
			<url>http://download.java.net/maven/2</url>
			<layout>default</layout>
		</repository>
	</repositories>

	<pluginRepositories/>

	<distributionManagement/>

	<properties>
		<jmockit.version>0.999.2</jmockit.version> 
	</properties>

	<dependencies>

		<!-- JUnit Helper Core -->
		<dependency>
			<groupId>junithelper-core</groupId>
			<artifactId>junithelper-core</artifactId>
			<version>1.0.2</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/junithelper-core-1.5.jar</systemPath>
		</dependency>

		<!-- juniversalchardet -->
		<dependency>
			<groupId>juniversalchardet</groupId>
			<artifactId>juniversalchardet</artifactId>
			<version>1.0.3</version>
			<scope>system</scope>
			<systemPath>${basedir}/lib/juniversalchardet-1.0.3.jar</systemPath>
		</dependency>

		<!-- Commons IO -->
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.0</version>
			<scope>compile</scope>
		</dependency>

		<!-- JUnit -->
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.5</version>
			<scope>provided</scope>
		</dependency>
        <dependency>
            <groupId>junit-addons</groupId>
            <artifactId>junit-addons</artifactId>
            <version>1.4</version>
            <scope>provided</scope>
        </dependency>
		<!-- Mockito -->
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-all</artifactId>
			<version>1.8.2</version>
			<scope>provided</scope>
		</dependency>
		<!-- JMock2 -->
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-junit3</artifactId>
			<version>2.5.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock</artifactId>
			<version>2.5.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>1.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-library</artifactId>
			<version>1.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>jmock</groupId>
			<artifactId>jmock-cglib</artifactId>
			<version>1.0.1</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.jmock</groupId>
			<artifactId>jmock-legacy</artifactId>
			<version>2.5.1</version>
			<scope>provided</scope>
		</dependency>
		<!-- JMockit -->
		<dependency>
			<groupId>mockit</groupId>
			<artifactId>jmockit</artifactId>
			<version>${jmockit.version}</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>mockit</groupId>
			<artifactId>jmockit-coverage</artifactId>
			<version>${jmockit.version}</version>
			<scope>runtime</scope>
		</dependency>
		<!-- EasyMock -->
		<dependency>
			<groupId>easymock</groupId>
			<artifactId>easymock</artifactId>
			<version>2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>easymock</groupId>
			<artifactId>easymockclassextension</artifactId>
			<version>2.2</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<configuration>
					<forkMode>pertest</forkMode>
					<argLine>-Xms256m -Xmx768m -XX:PermSize=128m -XX:MaxPermSize=512m</argLine>
					<testFailureIgnore>true</testFailureIgnore>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<source>1.6</source>
					<target>1.6</target>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-resources-plugin</artifactId>
				<configuration>
					<encoding>UTF-8</encoding>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-eclipse-plugin</artifactId>
				<configuration>
					<downloadSources>true</downloadSources>
					<downloadJavadocs>true</downloadJavadocs>
					<classpathContainers>
						<classpathContainer>org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5</classpathContainer>
						<classpathContainer>org.eclipse.pde.core.requiredPlugins</classpathContainer>
					</classpathContainers>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<minmemory>128m</minmemory>
					<maxmemory>256m</maxmemory>
					<quiet>true</quiet>
					<encoding>UTF-8</encoding>
					<bottom>
            <![CDATA[
            Copyright &copy; 2010 junithelper.org All Rights Reserved.
            ]]>
					</bottom>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<configuration>
					<locales>ja</locales>
					<inputEncoding>UTF-8</inputEncoding>
					<outputEncoding>UTF-8</outputEncoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<configuration>
					<goals>deploy,site-deploy</goals>
				</configuration>
			</plugin>
		</plugins>
	</build>
	<reporting>
		<plugins>
			<plugin>
				<artifactId>maven-javadoc-plugin</artifactId>
				<configuration>
					<minmemory>128m</minmemory>
					<maxmemory>256m</maxmemory>
					<quiet>true</quiet>
					<encoding>UTF-8</encoding>
					<bottom>
            <![CDATA[
            Copyright &copy; 2010 junithelper.org All Rights Reserved.
            ]]>
					</bottom>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>jxr-maven-plugin</artifactId>
				<configuration>
					<inputEncoding>UTF-8</inputEncoding>
					<outputEncoding>UTF-8</outputEncoding>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>surefire-report-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>taglist-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>cobertura-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-pmd-plugin</artifactId>
				<configuration>
					<linkXref>true</linkXref>
					<sourceEncoding>utf-8</sourceEncoding>
					<minimumTokens>100</minimumTokens>
					<targetJdk>1.6</targetJdk>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>findbugs-maven-plugin</artifactId>
				<configuration>
					<xmlOutput>true</xmlOutput>
					<effort>Max</effort>
				</configuration>
				<version>1.1.1</version>
			</plugin>
		</plugins>
	</reporting>
</project>
